--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,12 @@ spring.servlet.multipart.maxRequestSize=10MB
 spring.security.user.name=user
 spring.security.user.password=1234
 
+#MyBatis
+mybatis.mapper-locations=mybatis-mapper/*.xml
+spring.datasource.mapper-locations=classpath:mapper/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.ezen.product01
+logging.level.com.example.company.mapper=TRACE
 
 ## jpa
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
