--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,11 @@ spring.security.user.name=user
 spring.security.user.password=1234
 
 #MyBatis
-mybatis.mapper-locations=mybatis-mapper/*.xml
+#mybatis.mapper-locations=mybatis-mapper/*.xml
 spring.datasource.mapper-locations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath:mybatis-mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.type-aliases-package=com.ezen.product01
+mybatis.type-aliases-package=com.example.securityRenew
 logging.level.com.example.company.mapper=TRACE
 
 ## jpa
